infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: group-5-paybox
  name: paybox-5-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tcc-01.th1.proen.cloud
      http:
        paths:
          - backend:
              service:
                name: payment
                port:
                  number: 80
            path: "/group-5-paybox/paymentapi(/|$)(.*)"
            pathType: Prefix
